<resources>
    <string name="app_name">No Flow</string>
    <string name="google_maps_key">AIzaSyDwGk-fxLhpc0KdDB3wv74EIW0ctpA3uM4</string>

    <string name="first_fragment_label">Home</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Continuar</string>
    <string name="login">login</string>
    <string name="start">começar</string>
    <string name="inicio">início</string>
    <string name="perfil">perfil</string>
    <string name="password">senha</string>
    <string name="username">usuário</string>
    <string name="confirm">confirmar</string>
    <string name="not_register_now">não registrar agora</string>
    <string name="descobrir">Descobrir</string>
    <string name="mapa">Mapa</string>
    <string name="construction">Estamos em construção!</string>

    <string name="first_fragment">Agende seus compromissos.</string>
    <string name="first_fragment2">Evite aglomerações!</string>
    <string name="second_fragment">Tenha acesso a fila virtual</string>
    <string name="second_fragment_subtitle">Fila disponível a 200mt do local!</string>
    <string name="restaurant">restaurantes</string>
    <string name="today">hoje</string>
    <string name="parks">parques</string>
    <string name="bar">bares</string>
    <string name="services">serviços</string>
    <string name="drogary">drogarias</string>
    <string name="open">Aberto</string>
    <string name="morning">manhã</string>
    <string name="afternoon">tarde</string>
    <string name="noite">noite</string>
    <string name="line">Fila</string>
    <string name="availableHour">Horários disponíveis</string>
    <string name="remove">remover</string>
    <string name="week_day">dia da semana</string>
    <string name="sunday">domingo</string>
    <string name="monday">segunda-feira</string>
    <string name="tuesday">terca-feira</string>
    <string name="wednesday">quarta-feira</string>
    <string name="thursday">quinta-feira</string>
    <string name="friday">sexta-feira</string>
    <string name="saturday">sábado</string>
    <string name="hour">Horário</string>
    <string name="as">às</string>
    <string name="add_schedule">agendar</string>
    <string name="need_now">Precisa para agora?</string>
    <string name="subtitle_details">Esteja a 200mt do estabelecimento e tenha acesso a fila virtual.</string>
    <string name="get_row">ENTRAR NA FILA</string>
    <string name="quantity_row_title">Neste momento na fila:</string>
    <string name="pessoas">pessoas</string>
    <string name="numberPeople">pessoas</string>
    <string name="moment">no momento</string>
    <string name="success">Você está na fila!</string>
    <string name="row_subtitle">Lembre-se de ficar a 200mt de distância e acompanhar o status.</string>
    <string name="success_schedule">Agendamento realizado!</string>
    <string name="schedule_subtitle">Lembre-se de avaliar o local quando for.</string>
    <string name="best_hour">Horário com menor probabilidade de aglomeração:</string>
    <string name="hourText">horas</string>
</resources>