<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_resumo"
        android:title="@string/inicio"
        android:icon="@drawable/ic_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_search"
        android:title="@string/descobrir"
        android:icon="@drawable/ic_location"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_add_map"
        android:title="@string/mapa"
        android:icon="@drawable/ic_map"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_item_profile"
        android:title="@string/perfil"
        android:icon="@drawable/ic_account_circle"
        app:showAsAction="always|withText" />
</menu>