<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/weekDayLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:paddingBottom="16dp"
        android:text="@string/week_day"
        android:textColor="@color/black_overlay"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/sunday"
        style="@style/CheckBoxModality.Regular.Grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:button="@null"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/sunday"
        app:buttonCompat="@null"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@string/week_day"
        app:layout_constraintStart_toStartOf="@id/weekDayLabel"
        app:layout_constraintTop_toBottomOf="@id/weekDayLabel" />

    <CheckBox
        android:id="@+id/monday"
        style="@style/CheckBoxModality.Regular.Green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:button="@null"
        android:gravity="center"
        android:text="@string/monday"
        android:textSize="14sp"
        app:buttonCompat="@null"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toRightOf="@id/sunday"
        app:layout_constraintTop_toBottomOf="@id/weekDayLabel" />

    <CheckBox
        android:id="@+id/tuesday"
        style="@style/CheckBoxModality.Regular.Green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:button="@null"
        android:gravity="center"
        android:text="@string/tuesday"
        android:textSize="14sp"
        app:buttonCompat="@null"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toRightOf="@id/monday"
        app:layout_constraintTop_toBottomOf="@id/weekDayLabel" />

    <CheckBox
        android:id="@+id/wednesday"
        style="@style/CheckBoxModality.Regular.Green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:button="@null"
        android:gravity="center"
        android:text="@string/wednesday"
        android:textSize="14sp"
        app:buttonCompat="@null"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toRightOf="@id/tuesday"
        app:layout_constraintTop_toBottomOf="@id/weekDayLabel" />

    <CheckBox
        android:id="@+id/thursday"
        style="@style/CheckBoxModality.Regular.Green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:button="@null"
        android:gravity="center"
        android:text="@string/thursday"
        android:textSize="14sp"
        app:buttonCompat="@null"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/sunday"
        app:layout_constraintTop_toBottomOf="@id/sunday" />

    <CheckBox
        android:id="@+id/friday"
        style="@style/CheckBoxModality.Regular.Green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:button="@null"
        android:gravity="center"
        android:text="@string/friday"
        android:textSize="14sp"
        app:buttonCompat="@null"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toRightOf="@id/thursday"
        app:layout_constraintTop_toBottomOf="@id/monday" />

    <CheckBox
        android:id="@+id/saturday"
        style="@style/CheckBoxModality.Regular.Green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:button="@null"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/saturday"
        app:buttonCompat="@null"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toRightOf="@id/friday"
        app:layout_constraintTop_toBottomOf="@id/sunday" />

    <TextView
        android:id="@+id/hourLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:paddingBottom="18dp"
        android:text="@string/hour"
        android:textColor="@color/black_overlay"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/saturday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saturday" />

    <Spinner
        android:id="@+id/time"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@{viewModel.initialHourContentDescription}"
        android:lineSpacingExtra="6sp"
        android:spinnerMode="dropdown"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hourLabel"
        app:layout_constraintVertical_bias="0.928" />

    <ImageView
        android:id="@+id/initialTimeArrowDown"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:contentDescription="@null"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_arrow"
        app:layout_constraintBottom_toBottomOf="@id/time"
        app:layout_constraintEnd_toEndOf="@id/time"
        app:layout_constraintTop_toTopOf="@id/time" />

    <View
        android:id="@+id/underlineInitialTime"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:background="@color/gray_DFDCD9"
        android:paddingTop="17dp"
        app:layout_constraintBottom_toBottomOf="@id/time"
        app:layout_constraintEnd_toEndOf="@id/initialTimeArrowDown"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/confirmSchedule"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_bottom_navigation"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="14dp"
        android:text="@string/add_schedule"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/underlineInitialTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
